--- a/app/views/public/members/show.html.erb
+++ b/app/views/public/members/show.html.erb
@@ -7,7 +7,7 @@
     <div class = "row">
       <h3>登録情報</h3>
       <div class="col-sm-1"></div>
-      <%= link_to "編集する", edit_member_path(current_member), class: "btn btn-success" %>
+      <%= link_to "編集する", edit_member_path(@member.id), class: "btn btn-success" %>
     </div>
 
     <div class = "row">
