--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,11 +36,11 @@
               </li>
 
               <% elsif admin_signed_in? %>
-              <li class="btn btn-default border ml-4">-->
+              <li class="btn btn-default border ml-4">
                 <%= link_to "商品一覧", root_path, class: 'btn btn-default nav-link text-dark' %>
               </li>
               <li class="btn btn-default border ml-4">
-                <%= link_to "会員一覧", root_path, class: 'btn btn-default nav-link text-dark' %>
+                <%= link_to "会員一覧", admin_members_path, class: 'btn btn-default nav-link text-dark' %>
               </li>
               <li class="btn btn-default border ml-4">
                 <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: 'btn btn-default nav-link text-dark' %>
