--- a/app/views/public/members/show.html.erb
+++ b/app/views/public/members/show.html.erb
@@ -14,6 +14,10 @@
       <div class = "col-sm-10 ">
         <table class = "table table-bordered">
           <tr>
+            <td>プロフィール画面</td>
+            <td><%= attachment_image_tag @member, :image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %></td>
+          </tr>
+          <tr>
             <td>ニックネーム</td>
             <td><%= @member.name %></td>
           </tr>
