--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
                 <%= link_to "商品一覧", products_path, class: 'btn btn-default nav-link text-dark' %>
               </li>
               <li class="btn btn-default border ml-4">
-                <%= link_to "???", home_about_path, class: 'btn btn-default nav-link text-dark' %>
+                <%= link_to "About", home_about_path, class: 'btn btn-default nav-link text-dark' %>
               </li>
               <li class="btn btn-default border ml-4">
                 <%= link_to "ログアウト", destroy_member_session_path, method: :delete, class: 'btn btn-default nav-link text-dark' %>
