--- a/app/views/public/members/show.html.erb
+++ b/app/views/public/members/show.html.erb
@@ -1,34 +1,11 @@
- <div class = "container">
-    <div class = "row">
-       <div class="col-sm-1"></div>
-        <h4 class="mt-3 mb-3 bg-light">マイページ</h4>
+<div class="container">
+  <div class="row my-5">
+    <div class="col-sm-3">
+      <%= render 'public/members/mypage', member: current_member %>
     </div>
-
-    <div class = "row">
-      <h3>登録情報</h3>
-      <div class="col-sm-1"></div>
-      <%= link_to "編集する", edit_member_path(@member.id), class: "btn btn-success" %>
+<!--会員のレシピ投稿一覧を表地-->
+    <div class="col-sm-3">
+      <%= render 'public/recipes/recipe', recipes: @recipes %>
     </div>
-
-    <div class = "row">
-      <div class = "col-sm-10 ">
-        <table class = "table table-bordered">
-          <tr>
-            <td>プロフィール画面</td>
-            <td><%= attachment_image_tag @member, :image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %></td>
-          </tr>
-          <tr>
-            <td>ニックネーム</td>
-            <td><%= @member.name %></td>
-          </tr>
-          <tr>
-            <td>自己紹介</td>
-            <td><%= @member.introduction %></td>
-          </tr>
-            <td>メールアドレス</td>
-            <td><%= @member.email %></td>
-          </tr>
-        </table>
-      </div>
-    </div>
+  </div>
 </div>
