--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,9 +4,10 @@
     <title>Kodawari</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <script src="https://kit.fontawesome.com/1612cd58c9.js" crossorigin="anonymous"></script>
   </head>
 
   <body class="d-flex flex-column vh-100">
@@ -73,7 +74,7 @@
           <div class="col-sm-3">
               <!--<= form_tag(items_path, :method => "get") do %>-->
               <!--  <= text_field_tag :search %>-->
-              <!--  <= button_tag :type => "submit", :name => nil,　class: "button is-info " do %>-->
+              <!--  <= button_tag :type => "submit", :name => nil, class: "button is-info " do %>-->
               <!--  <i class="fas fa-search"></i>-->
               <!--  < end %>-->
               <!--< end %>-->
@@ -90,7 +91,7 @@
       <div class="container mt-5">
         <div class="row">
           <div class="mx-auto">
-            <p>Copyright © 2021 こだわり家金子精肉店　inc.　 All Rights Reserved.</p>
+            <p>Copyright © 2021 こだわり家金子精肉店 inc. All Rights Reserved.</p>
           </div>
         </div>
       </div>
