--- a/app/views/public/members/show.html.erb
+++ b/app/views/public/members/show.html.erb
@@ -1,7 +1,9 @@
 <div class="container">
   <div class="row my-5">
     <div class="col-sm-3">
-      <%= render 'public/members/mypage', member: current_member %>
+      <div class = "sidebar" >
+        <%= render 'public/members/mypage', member: current_member %>  
+      </div>   
     </div>
 <!--会員のレシピ投稿一覧を表地-->
     <div class="col-sm-3">
