--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,10 +4,9 @@
     <title>Kodawari</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    
+
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <script src="https://kit.fontawesome.com/1612cd58c9.js" crossorigin="anonymous"></script>
   </head>
 
   <body class="d-flex flex-column vh-100">
@@ -30,7 +29,7 @@
                 <%= link_to "商品一覧", products_path, class: 'btn btn-default nav-link text-dark' %>
               </li>
               <li class="btn btn-default border ml-4">
-                <%= link_to "About", home_about_path, class: 'btn btn-default nav-link text-dark' %>
+                <%= link_to "???", home_about_path, class: 'btn btn-default nav-link text-dark' %>
               </li>
               <li class="btn btn-default border ml-4">
                 <%= link_to "ログアウト", destroy_member_session_path, method: :delete, class: 'btn btn-default nav-link text-dark' %>
@@ -74,7 +73,7 @@
           <div class="col-sm-3">
               <!--<= form_tag(items_path, :method => "get") do %>-->
               <!--  <= text_field_tag :search %>-->
-              <!--  <= button_tag :type => "submit", :name => nil, class: "button is-info " do %>-->
+              <!--  <= button_tag :type => "submit", :name => nil,　class: "button is-info " do %>-->
               <!--  <i class="fas fa-search"></i>-->
               <!--  < end %>-->
               <!--< end %>-->
@@ -91,7 +90,7 @@
       <div class="container mt-5">
         <div class="row">
           <div class="mx-auto">
-            <p>Copyright © 2021 こだわり家金子精肉店 inc. All Rights Reserved.</p>
+            <p>Copyright © 2021 こだわり家金子精肉店　inc.　 All Rights Reserved.</p>
           </div>
         </div>
       </div>
