--- a/app/views/public/products/index.html.erb
+++ b/app/views/public/products/index.html.erb
@@ -1,7 +1,15 @@
 <div class="container">
   <div class="row my-5">
     <div class="col-sm-3">
-      <%= render 'public/members/mypage', member: current_member %>
+      <table class="table table-bordered">
+        <thead>
+          <tr>
+            <td>マイページ</td>
+          </tr>
+        </thead>
+        <tbody>
+        </tbody>
+      </table>
     </div>
     
     <div class="col-sm-9">
