--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,1 +1,22 @@
-ホームページです
+<div class="container">
+  <div class="row my-5">
+<!--いいねレシピtop5を表示-->
+    <div class="col-sm-3">
+      <div class = "sidebar" >
+        ここにいいねレシピTOP5が入ります  
+      </div>   
+    </div>
+<!--店舗写真と紹介文-->
+    <div class="col-sm-9">
+      <div class = "col-sm-6 offset-sm-3 home-image"></div>
+      <div class = "mx-auto home-text">
+      <h3><strong>おうち時間をお肉と共に、元気に過ごしましょう！</strong></h3>
+      <p>このサイトは、こだわり家金子精肉店のお肉を取り扱ったか商品レシピサイトです。</p>
+      <p>皆様が当店でお肉を購入して頂いた後の調理のお力になれれば幸いです！</p>
+      <p>商品に関するレシピの投稿や、レシピへのレビューを行えるようになっておりますので</p>
+      <p>皆様のお力もお借りして、より良いサイトを築き上げていきたいと思っています！</p>
+      <p>ぜひご覧下さい！！</p>
+    </div>
+    </div>
+  </div>
+</div>
