--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,7 +52,7 @@
                 <%= link_to "About", home_about_path, class: 'btn btn-default nav-link text-dark' %>
               </li>
               <li class="btn btn-default border ml-4">
-                <%= link_to "商品一覧ページ", home_about_path, class: 'btn btn-default nav-link text-dark' %>
+                <%= link_to 'ゲストログイン（閲覧用）', homes_guest_sign_in_path, method: :post, class: 'btn btn-default nav-link text-dark' %>
               </li>
               <li class="btn btn-default border ml-4">
                 <%= link_to "新規登録", new_member_registration_path, class: 'btn btn-default nav-link text-dark' %>
