--- a/app/views/public/members/_mypage.html.erb
+++ b/app/views/public/members/_mypage.html.erb
@@ -2,7 +2,7 @@
 
 <!--プロフィール画を表示-->
 <div class = "profile-img" >
-  <%= attachment_image_tag member, :image, :fill, 100, 100, fallback: "no_image.jpg", class:"prifile_img"  %>  
+  <%= attachment_image_tag member, :image, :fill, 100, 100, fallback: "no_image.jpg", class:"prifile_img"  %>
 </div>
 <!--会員情報を表示-->
 <div class = "information" >
@@ -15,10 +15,10 @@
 <!--いいね一覧と編集リンクボタンを表示-->
 <div class = "botton" >
   <div class='favorite-botton'>
-    <%= link_to "いいねレシピ一覧", root_path, class: "btn btn-primary" %>
+    <%= link_to "いいねレシピ一覧", member_favorites_path(member.id), class: "btn btn-primary" %>
   </div>
-  
+
   <div class='edit-botton'>
     <%= link_to "編集する", edit_member_path(member.id), class: "btn btn-success" %>
-  </div>  
+  </div>
 </div>
