--- a/app/views/public/products/show.html.erb
+++ b/app/views/public/products/show.html.erb
@@ -7,7 +7,7 @@
     <div class="col-sm-6">
       <div class="d-flex flex-wrap">
         <div class="flex-item">
-          <div class="card border-0">
+          <div class="product">
               <%= attachment_image_tag @product, :image, :fill, 500, 300 %>
               <p class="card-title">
                 <%= @product.name %>
