--- a/app/views/public/recipes/show.html.erb
+++ b/app/views/public/recipes/show.html.erb
@@ -20,13 +20,15 @@
               </p>
               <p class="card-title">
                 <%= render 'public/favorites/favorite', recipe: @recipe %>
-              </p>
-              <p class="card-title">
-                <%= link_to "レシピを編集する", edit_product_recipe_path(@recipe.product_id,@recipe.id) ,class:"btn btn-primary" %>
-              </p>
-              <p class="card-title">
-                <%= link_to "レシピを削除する", product_recipe_path(@recipe.product_id,@recipe.id),method: :delete,"data-confirm" => "本当に削除しますか？" ,class:"btn btn-danger" %>
-              </p>
+              </p> 
+              <% if @recipe.member == current_member %>
+                <p class="card-title">
+                  <%= link_to "レシピを編集する", edit_product_recipe_path(@recipe.product_id,@recipe.id) ,class:"btn btn-primary" %>
+                </p>
+                <p class="card-title">
+                  <%= link_to "レシピを削除する", product_recipe_path(@recipe.product_id,@recipe.id),method: :delete,"data-confirm" => "本当に削除しますか？" ,class:"btn btn-danger" %>
+                </p>
+              <% end %>
               <div class="card-content">
                 <div class="content average-score">
                   <div class="star-rating mb-2">
