--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -66,18 +66,13 @@
         </nav>
 
         <div class="row mt-2">
-          <div class="col-sm-9 text-center">
+          <div class="col-sm-7 text-center">
             <% if member_signed_in? %>
               <p>ようこそ、<%= current_member.name %>さん！</p>
             <% end %>
           </div>
-          <div class="col-sm-3">
-              <!--<= form_tag(items_path, :method => "get") do %>-->
-              <!--  <= text_field_tag :search %>-->
-              <!--  <= button_tag :type => "submit", :name => nil, class: "button is-info " do %>-->
-              <!--  <i class="fas fa-search"></i>-->
-              <!--  < end %>-->
-              <!--< end %>-->
+          <div class="col-sm-5">
+             <%= render 'public/searchs/form' %>
           </div>
         </div>
       </div>
