--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -3,7 +3,7 @@
 <!--いいねレシピtop5を表示-->
     <div class="col-sm-3">
       <div class = "sidebar" >
-        ここにいいねレシピTOP5が入ります  
+        <%= render 'public/homes/rank', all_ranks: @all_ranks %>
       </div>   
     </div>
 <!--店舗写真と紹介文-->
