--- a/app/views/public/recipes/show.html.erb
+++ b/app/views/public/recipes/show.html.erb
@@ -18,9 +18,9 @@
               <p class="card-title">
                 <%= @recipe.kodawari %>
               </p>
-              <p class="favorite-btn-<%= @recipe.id %>">
+              <div class="favorite-btn-<%= @recipe.id %>">
                 <%= render 'public/favorites/favorite', recipe: @recipe %>
-              </p>
+              </div>
               <% if @recipe.member == current_member %>
                 <p class="card-title">
                   <%= link_to "レシピを編集する", edit_product_recipe_path(@recipe.product_id,@recipe.id) ,class:"btn btn-primary" %>
