--- a/app/views/public/members/favorites.html.erb
+++ b/app/views/public/members/favorites.html.erb
@@ -5,7 +5,7 @@
         <%= render 'public/members/mypage', member: current_member %>
       </div>
     </div>
-<!--会員のレシピ投稿一覧を表地-->
+<!--会員のいいねレシピ投稿一覧を表地-->
     <div class="col-sm-9">
       <div class="recipe-favorites">
         <p>いいねレシピ一覧(全<%= @favorites.count %>件)</p>
