--- a/app/views/public/contacts/new.html.erb
+++ b/app/views/public/contacts/new.html.erb
@@ -5,6 +5,11 @@
   </div>
 
   <div class="form-group">
+    <%= f.label :email, '返信先メールアドレス' %>
+    <%= f.text_field :email, autofocus: true, class: 'form-control' %>
+  </div>
+
+  <div class="form-group">
     <%= f.label :message, 'メッセージ*' %>
     <%= f.text_area :message, size: '10x10', class: 'form-control' %>
   </div>
