--- a/app/views/public/recipes/show.html.erb
+++ b/app/views/public/recipes/show.html.erb
@@ -18,17 +18,18 @@
               <p class="card-title">
                 <%= @recipe.kodawari %>
               </p>
-              <div class="favorite-btn-<%= @recipe.id %>">
-                <%= render 'public/favorites/favorite', recipe: @recipe %>
-              </div>
               <% if @recipe.member == current_member %>
-                <p class="card-title">
+                <p class="card-button">
                   <%= link_to "レシピを編集する", edit_product_recipe_path(@recipe.product_id,@recipe.id) ,class:"btn btn-primary" %>
                 </p>
-                <p class="card-title">
+                <p class="card-button">
                   <%= link_to "レシピを削除する", product_recipe_path(@recipe.product_id,@recipe.id),method: :delete,"data-confirm" => "本当に削除しますか？" ,class:"btn btn-danger" %>
                 </p>
               <% end %>
+              <div class="favorite-btn-<%= @recipe.id %>">
+                <%= render 'public/favorites/favorite', recipe: @recipe %>
+              </div>
+<!--星レビュー機能実装コード-->
               <div class="card-content">
                 <div class="content average-score">
                   <div class="star-rating mb-2">
