--- a/app/views/public/recipes/edit.html.erb
+++ b/app/views/public/recipes/edit.html.erb
@@ -1,14 +1,27 @@
+<!--バリデーションメッセージ-->
+<% if @recipe.errors.any? %>
+  <div class="notification is-danger">
+    <h2><%= @recipe.errors.count %>件のエラーがあります。</h2>
+    <ul>
+      <% @recipe.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
+
+
 <div class="container">
   <div class="row text-right mt-4">
-    <div class="col-sm-4">
+    <div class="col-sm-8">
       <h4>レシピ編集画面</h4>
     </div>
   </div>
 
   <%= form_with model: @recipe, url: product_recipe_path, local:true do |f| %>
     <div class="row">
-      <div class="col-sm-10 offset-2">
-        <table class="table-borderless-item">
+      <div class="col-sm-11 offset-1">
+        <table class="table-borderless-form">
           <tr>
             <div>
               <td><%= f.label :レシピ画像 %></td>
@@ -18,19 +31,19 @@
           <tr>
             <div class="col-sm-2">
               <td><%= f.label :レシピ名 %></td>
-              <td><%= f.text_field :name, class:"form-control" %></td>
+              <td><%= f.text_field :name, class: 'form-size' %></td>
             </div>
           </tr>
           <tr>
             <div class="col-sm-2">
               <td><%= f.label :レシピ説明 %></td>
-              <td><%= f.text_area :introduction, class:"form-control" %></td>
+              <td><%= f.text_area :introduction, class:"form-control", class: 'form-size' %></td>
             </div>
           </tr>
           <tr>
             <div>
               <td><%= f.label :レシピのこだわり %></td>
-              <td><%= f.text_area :kodawari, class:"form-control" %></td>
+              <td><%= f.text_area :kodawari, class:"form-control", class: 'form-size' %></td>
             </div>
           </tr>
         </table>
