--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,7 +23,7 @@
 .profile-img img{
   border-radius: 90px;
   width: 60%;
-  margin: 20px 50px; 
+  margin: 20px 50px;
 }
 
 // プロフィールボタンの間隔をあける
@@ -60,7 +60,7 @@
 
 body {
   min-height: 100vh;
-  background-image: linear-gradient(to top, #fff1eb 0%, #ace0f9 100%);
+  background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
   font-family: sans-serif;
 }
 
@@ -102,11 +102,11 @@ body {
 
 // サイドバーに枠線をつける
 
-.sidebar {
-  border: solid;
-  border: 4px solid;
-  border-color: black;
-}
+// .sidebar {
+//   border: solid;
+//   border: 4px solid;
+//   border-color: black;
+// }
 
 // home画面の写真設定
 
@@ -261,4 +261,80 @@ h1 {
 h3.search {
   text-align: center;
   padding: 20px 0;
+}
+
+// カミナリテキストの編集
+.pagination {
+  justify-content: center;
+}
+
+// バリデーションの装飾
+
+div.field_with_errors {
+  background-color: #fcc;
+  padding: 10px;
+}
+
+div.notification {
+  text-align: center;
+}
+
+// about画面の画面編集
+
+.about-image {
+  height: 200px;
+  background-image: url(tenpo.jpg);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+// ABOUT画面の住所表記
+
+.address {
+  text-align: center;
+}
+
+// レシピボタンの配置
+
+.recipe-button {
+  display: flex;
+  margin: 10px 100px;
+}
+
+.card-button {
+  margin: 10px 50px;
+}
+
+// ランク画像を編集
+
+.rank {
+  text-align: center;
+  font-size: 20px;
+}
+
+.rank-product {
+  text-align: center;
+  margin: 0 auto;
+  padding: 10px 0;
+}
+
+.rank-title {
+  padding: 10px 0 0 0;
+}
+
+.product-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+
+.form-size {
+  width: 200%;
+  height: 200px;
+}
+
+table.table-borderless-form {
+  border-collapse:separate;
+	border-spacing: 50px 20px;
 }
