--- a/app/views/admin/members/index.html.erb
+++ b/app/views/admin/members/index.html.erb
@@ -4,7 +4,7 @@
       <h4>会員一覧</h4>
     </div>
   </div>
-    
+
   <div class="row mb-4">
     <div class="col-sm-1"></div>
     <div class="col-sm-10">
@@ -17,14 +17,14 @@
                 <th>ステータス</th>
             </tr>
         </thead>
-    
+
         <tbody>
             <% @members.each do |member|%>
             <tr>
                 <td><%= member.id %></td>
                 <td>
                     <%= link_to admin_member_path(member.id) do %>
-                        <%= member.name %>
+                      <%= member.name %>
                     <% end %>
                 </td>
                 <td><%= member.email %></td>
@@ -41,5 +41,5 @@
       </table>
     </div>
   </div>
-    <!--<= paginate @members %>-->
+    <%= paginate @members %>
 </div>
