--- a/app/views/public/homes/_rank.html.erb
+++ b/app/views/public/homes/_rank.html.erb
@@ -2,14 +2,14 @@
 
 
 <div class="recipe-index">
-  <p>いいねレシピTOP3</p>
+  <p class = "rank"><strong>いいねレシピTOP3</strong></p>
   <div class="d-flex flex-wrap">
     <% all_ranks.each.with_index(1) do |recipe, i| %>
-    <div class="flex-item">
+    <div class="rank-product">
       <div class="card　border-0">
         <%= link_to product_recipe_path(recipe.product_id,recipe.id) do %>
           <%= attachment_image_tag recipe, :image, :fill, 170, 100 %>
-          <p class="card-title">
+          <p class="rank-title">
             第<%= i %>位 <%= recipe.name %>
           </p>
         <% end %>
