--- a/app/views/public/members/edit.html.erb
+++ b/app/views/public/members/edit.html.erb
@@ -1,3 +1,15 @@
+<!--バリデーションメッセージ-->
+<% if @member.errors.any? %>
+  <div class="notification is-danger">
+    <h2><%= @member.errors.count %>件のエラーがあります。</h2>
+    <ul>
+      <% @member.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
+
 <div class = "container">
   <div class = "row">
     <h4 class="mt-3 mb-3 bg-light">会員情報編集</h4>
@@ -19,7 +31,7 @@
             </tr>
             <tr>
               <td>自己紹介</td>
-              <td><%= f.text_field :introduction %></td>
+              <td><%= f.text_area :introduction, class: 'form-size' %></td>
             </tr>
             <tr>
               <td>メールアドレス</td>
