--- a/app/views/public/products/index.html.erb
+++ b/app/views/public/products/index.html.erb
@@ -5,22 +5,25 @@
     </div>
     
     <div class="col-sm-9">
-      <p>商品一覧(全<%= Product.count %>件)</p>
-      <div class="d-flex flex-wrap">
-        <% @products.each do |product| %>
-        <div class="flex-item">
-          <div class="card　border-0">
-            <%= link_to product_path(product.id) do %>
-              <%= attachment_image_tag product, :image, :fill, 170, 100 %>
-              <p class="card-title">
-                <%= product.name %>
-              </p>
+<!--商品一覧を表示する-->
+          <p>商品一覧(全<%= Product.count %>件)</p>
+        <div class = "product-container">  
+          <div class="d-flex flex-wrap">
+            <% @products.each do |product| %>
+            <div class="flex-item">
+              <div class="card　border-0">
+                <%= link_to product_path(product.id) do %>
+                  <%= attachment_image_tag product, :image, :fill, 170, 100 %>
+                  <p class="product-title">
+                    <%= product.name %>
+                  </p>
+                <% end %>
+              </div>
+            </div>
             <% end %>
-          </div>
+          </div> 
         </div>
-        <% end %>
-      </div>        
-
     </div>
   </div>
+  <%= paginate @products %>
 </div>
