--- a/app/views/public/reviews/index.html.erb
+++ b/app/views/public/reviews/index.html.erb
@@ -1,4 +1,3 @@
-<section class="section mt-6">
   <div class="container">
         <div class="card mb-7">
           <header class="card-header">
@@ -37,5 +36,5 @@
             <% end %>
           </tbody>
         </table>
+        <%= paginate @reviews %>
   </div>
-</section>
