--- a/app/views/public/recipes/edit.html.erb
+++ b/app/views/public/recipes/edit.html.erb
@@ -13,7 +13,7 @@
 
 <div class="container">
   <div class="row text-right mt-4">
-    <div class="col-sm-8">
+    <div class="col-sm-7">
       <h4>レシピ編集画面</h4>
     </div>
   </div>
@@ -31,7 +31,7 @@
           <tr>
             <div class="col-sm-2">
               <td><%= f.label :レシピ名 %></td>
-              <td><%= f.text_field :name, class: 'form-size' %></td>
+              <td><%= f.text_field :name, class: 'form-mini' %></td>
             </div>
           </tr>
           <tr>
