--- a/app/views/public/reviews/_form.html.erb
+++ b/app/views/public/reviews/_form.html.erb
@@ -27,7 +27,7 @@
     </div>
     <%= f.hidden_field :recipe_id, value: recipe.id %>
     <%= f.hidden_field :score, id: "rating-value" %>
-    <%= f.text_field :comment, class: "textarea" %>
+    <%= f.text_area :comment, class: "textarea", class: 'review-form' %>
     <%= f.submit "保存", class: "button mt-3" %>
     <%= link_to "他のレビューを見る", product_recipe_reviews_path(recipe.product_id, recipe.id), class: "button light ml-3 mt-3" %>
   <% end %>
