--- a/app/views/public/products/show.html.erb
+++ b/app/views/public/products/show.html.erb
@@ -20,7 +20,7 @@
                 <%= simple_format(@product.kodawari) %>
                 <!--<= @product.kodawari %>-->
               </p>
-              <p class="card-title">
+              <p class="recipe-create">
                 <%= link_to "レシピを投稿する", new_product_recipe_path(@product.id) ,class:"btn btn-primary" %>
               </p>
           </div>
