--- a/app/views/public/recipes/_recipe.html.erb
+++ b/app/views/public/recipes/_recipe.html.erb
@@ -5,7 +5,7 @@
   <p>レシピ一覧(全<%= recipes.count %>件)</p>
   <div class="d-flex flex-wrap">
     <% recipes.each do |recipe| %>
-    <div class="flex-item">
+    <div class="flex-recipe">
       <div class="card　border-0">
         <%= link_to product_recipe_path(recipe.product_id,recipe.id) do %>
           <%= attachment_image_tag recipe, :image, :fill, 170, 100, fallback: "noimage.jpg", class:"recipe_img" %>
