--- a/app/views/public/contacts/confirm.html.erb
+++ b/app/views/public/contacts/confirm.html.erb
@@ -1,5 +1,5 @@
 
-<table>
+<table class="table-borderless-confirm">
   <tbody>
     <tr>
       <td class="text-center" style="width: 30%;">お名前</td>
@@ -16,19 +16,28 @@
   </tbody>
 </table>
 
-<%= form_for(@contact) do |f| %>
-  <%= f.hidden_field :name %>
-  <%= f.hidden_field :email %>
-  <%= f.hidden_field :phone_number %>
-  <%= f.hidden_field :subject %>
-  <%= f.hidden_field :message %>
-  <div><%= f.submit '送信' %></div>
-<% end %>
-<%= form_for @contact, url: back_path do |f| %>
-  <%= f.hidden_field :name %>
-  <%= f.hidden_field :email %>
-  <%= f.hidden_field :phone_number %>
-  <%= f.hidden_field :subject %>
-  <%= f.hidden_field :message %>
-  <div><%= f.submit '入力画面に戻る' %></div>
-<% end %>
+<div class = "confirm">
+
+  <div class = "confirm-button">
+    <%= form_for(@contact) do |f| %>
+      <%= f.hidden_field :name %>
+      <%= f.hidden_field :email %>
+      <%= f.hidden_field :phone_number %>
+      <%= f.hidden_field :subject %>
+      <%= f.hidden_field :message %>
+      <div><%= f.submit '送信' %></div>
+    <% end %>
+  </div>
+
+  <div class = "confirm-button">
+    <%= form_for @contact, url: back_path do |f| %>
+      <%= f.hidden_field :name %>
+      <%= f.hidden_field :email %>
+      <%= f.hidden_field :phone_number %>
+      <%= f.hidden_field :subject %>
+      <%= f.hidden_field :message %>
+      <div><%= f.submit '入力画面に戻る' %></div>
+    <% end %>
+  </div>
+
+</div>
