--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,1 +1,19 @@
-管理者ホームページです
+<div class="container">
+  <div class="row my-5">
+<!--いいねレシピtop5を表示-->
+    <div class="col-sm-5">
+      <div class = "sidebar" >
+        <div class = "col-sm-9 offset-sm-3 admin-image"></div>
+      </div>
+    </div>
+<!--店舗写真と紹介文-->
+    <div class="col-sm-7">
+      <div class = "mx-auto admin-home">
+      <h3><strong>管理者側ホームページ！</strong></h3>
+      <p>商品投稿が行えます。</p>
+      <p>会員情報一覧で会員の編集と会員のステータスを確認できます。</p>
+      </p>
+    </div>
+    </div>
+  </div>
+</div>
