--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -431,3 +431,12 @@ table.table-borderless-confirm {
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+// 商品・レシピのタイトル
+
+.recipe-info {
+  // text-align: center;
+  font-size: 20px;
+  font-family: ヒラギノ丸ゴ ProN;
+}
+
