--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -118,7 +118,7 @@ body {
 
 .home-image {
   height: 300px;
-  background-image: image-url(kodawariya.jpg);
+  background-image: image-url("kodawari.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -289,7 +289,7 @@ div.notification {
 
 .about-image {
   height: 200px;
-  background-image: image-url(tenpo.jpg);
+  background-image: image-url("tenpo.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -426,7 +426,7 @@ table.table-borderless-confirm {
 
 .admin-image {
   height: 300px;
-  background-image: image-url(tensyu.jpg);
+  background-image: image-url("tensyu.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
