--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -118,7 +118,7 @@ body {
 
 .home-image {
   height: 300px;
-  background-image: image-url("kodawari.jpg");
+  background-image: image-url("kodawariya.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
